# hikr

./: README.md  config.py  main.py  pyproject.toml  requirements.txt
app/: _init_.py
app/scripts/: google_geocoding.py  script.py  weather.py
app/static/: custom.css
app/templates/: search.html
scripts/: google_geocoding.py  google_places.py  script.py  scriptTrail.py  weather.py
static/: custom.css
static/style/: custom.css
templates/: index.html  search.html  trail.html
